rubocop/examples/bad/Style_ConstantName.rb
# 'https://github.com/bbatsov/ruby-style-guide#screaming-snake-case'

#  Use SCREAMING_SNAKE_CASE for other constants.

# bad
SomeConst = 5
